hopefully overflow dropdown fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1693,16 +1693,17 @@ input, select, textarea {
             font-size: 1.2em;
             transition: transform 0.3s ease;
         }
+
         
         .dropdown-content {
             max-height: 0;
-            overflow: hidden;
             transition: max-height 0.3s ease;
             padding: 0 1rem;
             background-color: rgba(0, 0, 0, 0);
             border: 1px solid transparent;
             border-top: none;
             border-radius: 0 0 1px 1px;
+			overflow: visible !important;
         }
         
         .dropdown.open .dropdown-content {
